docker/ums/config/ums-sidecar.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: ingress_ums
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_ums
                codec_type: AUTO
                use_remote_address: true
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: ingress_ums
                      domains:
                        - "*"
                      cors:
                        allow_origin_string_match:
                          - exact: "*"
                      routes:
                        - match:
                            prefix: "/ums"
                            case_sensitive: false
                          route:
                            timeout:
                              seconds: 0
                            cluster: ums-service
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: >
                                <html>
                                  <meta charset="utf-8">
                                  <a href="/docs"> ums API 文档 </a>
                                  <br />
                                  <a href="/phpldapadmin"> LDAP 服务器管理 </a>
                                  <br />
                                  <a href="/redis-commander"> redis 服务器管理 </a>
                                </html>
                          response_headers_to_add:
                            header:
                              key: content-type
                              value: text/html
                http_filters:
                  - name: envoy.filters.http.cors
                  - name: envoy.filters.http.router
  clusters:
    - name: ums-service
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: ums-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ums-service
                      port_value: 3000
